@@ -1,5 +1,17 @@
 2007-06-12  Markus Deuling  <deuling@de.ibm.com>
 
+	* gdbarch.sh (REGISTER_TO_VALUE): Replace by gdbarch_register_to_value.
+	* findvar.c (value_from_register): Likewise.
+	* gdbarch.sh (VALUE_TO_REGISTER): Replace by gdbarch_value_to_register.
+	* valops.c (value_assign): Likewise.
+	* gdbarch.sh (CONVERT_REGISTER_P): Replace by
+	gdbarch_convert_register_p.
+	* findvar.c (value_from_register): Likewise.
+	* valops.c (value_assign): Likewise.
+	* gdbarch.c, gdbarch.h: Regenerate.
+
+2007-06-12  Markus Deuling  <deuling@de.ibm.com>
+
 	* gdbarch.sh (REGISTER_SIM_REGNO): Replace by
 	gdbarch_register_sim_regno.
 	* sim-regno.h (sim_regno): Likewise (comment).
